welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: not found: value days
  days=(day+6)%7
  ^alarmClock:3: error: not found: value days
  if (days<6 && vacation==false){
      ^alarmClock:6: error: not found: value days
  if ((days>5 && vacation==false)||(days<6 && vacation==true)){
       ^alarmClock:6: error: not found: value days
  if ((days>5 && vacation==false)||(days<6 && vacation==true)){
                                    ^