welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
  days=(day+6)%7
  if (days<6 && vacation==false){
    return "7:00"
  }
  if ((days>5 && vacation==false)||(days<6 && vacation==true)){
    return "10:00"
  }
  else{
    return "off"
  }
}